--- a/docs-src/main.css
+++ b/docs-src/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   max-width: 960px;
   margin: auto;
@@ -36,8 +36,7 @@ kbd {
   background-color: hsl(210, 8%, 90%);
   border: 1px solid hsl(210, 8%, 65%);
   border-radius: 3px;
-  box-shadow: 0 1px 1px hsl(210deg 8% 5% / 15%),
-    inset 0 1px 0 0 hsl(0deg 0% 100%);
+  box-shadow: 0 1px 1px hsl(210deg 8% 5% / 15%), inset 0 1px 0 0 hsl(0deg 0% 100%);
   overflow-wrap: break-word;
 }
 
@@ -50,7 +49,7 @@ ul li {
 }
 
 ul li:before {
-  content: '-';
+  content: "-";
   color: #999;
   position: absolute;
   margin-left: -1rem;
@@ -107,7 +106,7 @@ ul li:before {
   display: flex;
   justify-content: space-between;
   width: 200px;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 td:nth-child(2n) {
